--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>document</title>
+
+    </head>
+    <body>
+        <h1>Pasta gremolata met ricotta</h1>
+        <ul>
+            <li><a href="index.html">Pasta gremolata met ricotta</a></li>
+            <li><a href="Pasta-met-kerstomaatjes.html">Supersnelle pasta met kerstomaatjes</a></li>
+            <li><a href="Chorizo-met-ei.html">Chorizo met ei</a></li>
+        </ul>
+        <img src="Img/Foto1.jpg">
+
+        <h2>ingredienten</h2>
+        <ul>
+            <li>500g farfalle</li>
+            <li>1 el pijnboompitten</li>
+            <li>1 teentje knoflook</li>
+            <li>1 cintroenschil</li>
+            <li>250g ricotta</li>
+            <li>Handje bladpeterselie</li>
+        </ul>
+            
+        <h2>Bereiding</h2>
+            <ol>
+                <li>Kook de pasta beetgaar in een ruime hoeveelheid gezouten water</li>
+                <li>Snipper de peterselie in de knoflook. Vermeng ze met de geraspte citroenschil</li>
+                <li>Schep de ricotta door de warme pasta en verdeel over de borden. Bestrooi met de gremolata en werk af pijnboompitten</li>
+            </ol>
+
+
+    </body>
+</html>
